# rainfall-risk-and-parametric-insurance-simulator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260506_0001_create_core_postgis_schema.py  20260515_0002_rainfall_stations_data_source_default.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  deps.py  routes_assets.py  routes_health.py  routes_map.py  routes_model.py  routes_portfolio.py  routes_reports.py  routes_simulation.py
backend/src/cli/: __init__.py  assign_lgas.py  build_training_data.py  export_report.py  generate_features.py  ingest_data.py  match_stations.py  predict_model.py  run_sensitivity.py  score_risk.py  simulate_payouts.py  train_model.py
backend/src/core/: __init__.py  config.py  logging.py
backend/src/db/: __init__.py  base.py  health.py  models.py  session.py
backend/src/domain/: __init__.py  constants.py
backend/src/features/: __init__.py  rainfall_features.py
backend/src/geospatial/: __init__.py  lga_join.py  station_matching.py
backend/src/ingestion/: __init__.py  assets.py  boundaries.py  rainfall.py
backend/src/insurance/: __init__.py  payout.py  simulation.py
backend/src/ml/: __init__.py  dataset.py  evaluation.py  prediction.py  splits.py  tracking.py  training.py
backend/src/reports/: __init__.py  export.py  methodology.py
backend/src/risk/: __init__.py  bands.py  scoring.py
backend/src/schemas/: __init__.py  api_assets.py  api_common.py  api_map.py  api_model.py  api_portfolio.py  api_reports.py  api_simulation.py  assets.py  boundaries.py  lga_join.py  risk.py  (+8 more)
backend/tests/: conftest.py  test_alembic_config.py  test_api_assets.py  test_api_health.py  test_api_map.py  test_api_model.py  test_api_portfolio.py  test_api_reports.py  test_api_simulation.py  test_asset_csv_ingestion.py  test_assign_lgas_cli.py  test_boundary_ingestion.py  test_build_training_data_cli.py  test_config.py  test_db_session.py  test_export_report_cli.py  test_generate_features_cli.py  test_health.py  test_ingestion_cli.py  test_lga_join.py  test_lga_join_sql.py  test_match_stations_cli.py  test_ml_dataset.py  test_ml_dataset_sql.py  test_ml_evaluation.py  test_ml_prediction.py  test_ml_prediction_sql.py  test_ml_splits.py  test_ml_tracking.py  test_ml_training.py  test_models.py  test_openapi.py  test_payout.py  test_payout_sql.py  test_predict_model_cli.py  test_rainfall_features.py  test_rainfall_features_sql.py  test_rainfall_ingestion.py  test_report_export.py  test_report_templates.py  (+13 more)
(+67 files in other folders)
