[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulator-backend"
version = "0.1.0"
description = "Backend for the rainfall-risk and parametric-insurance simulator."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Simulator" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "geoalchemy2>=0.15,<1.0",
    "pandas>=2.2,<3.0",
    "geopandas>=0.14,<1.1",
    "shapely>=2.0,<3.0",
    "lightgbm>=4.3,<5.0",
    "mlflow>=2.14,<3.0",
    "jinja2>=3.1,<4.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "black>=24.4,<25.0",
    "mypy>=1.10,<2.0",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]
# FastAPI uses Depends(...) / Query(...) as default arguments — that's the
# idiomatic pattern, not a bug.
"src/api/routes_*.py" = ["B008"]
"src/api/deps.py" = ["B008"]

# ── Black ─────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
extend-exclude = "alembic/versions"

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = []
exclude = ["alembic/versions"]

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "ignore::DeprecationWarning",
]
